--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
----
-# vim: ft=yaml
-# docker-compose recipe for easiness
 version: '2'
 services:
+
   jenkins-dood:
-    build:
-      context: .
+    image: jenkins-dood
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./jenkins_home/jobs:/var/jenkins_home/jobs
     ports:
-      - "8080:8080"
+      - 99:8080
